fixed bug not showing students in link generation list viewer

--- a/public/assets/styles/sass/base/_page-element.scss
+++ b/public/assets/styles/sass/base/_page-element.scss
@@ -771,7 +771,7 @@ td.link-spec {
   div {
     display: flex;
     flex-direction: column;
-    margin: 0;
+    margin: 0 20px 0 0;
     p {
       margin: 0;
     }
